--- a/index.html
+++ b/index.html
@@ -7,42 +7,19 @@
     <script src="js/main.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <h1></h1>
-    <table>
-    <tr>
-        <td id="sq0">
-        <div></div>
-        </td>
-        <td id="sq1">
-        <div></div>
-        </td>
-        <td id="sq2">
-        <div></div>
-        </td>
-    </tr>
-    <tr>
-        <td id="sq3">
-        <div></div>
-        </td>
-        <td id="sq4">
-        <div></div>
-        </td>
-        <td id="sq5">
-        <div></div>
-        </td>
-    </tr>
-    <tr>
-        <td id="sq6">
-        <div></div>
-        </td>
-        <td id="sq7">
-        <div></div>
-        </td>
-        <td id="sq8">
-        <div></div>
-        </td>
-    </tr>
-    </table>
-    <button>RESET GAME</button>
+    <h1>Tic-Tac-Toe</h1>
+    <h3>Message Line</h3>
+    <section id="board">
+        <div id="sq0"></div>
+        <div id="sq1"></div>
+        <div id="sq2"></div>
+        <div id="sq3"></div>
+        <div id="sq4"></div>
+        <div id="sq5"></div>
+        <div id="sq6"></div>
+        <div id="sq7"></div>
+        <div id="sq8"></div>
+    </section>
+    <button>Play Again</button>
 </body>
 </html>
