--- a/index.html
+++ b/index.html
@@ -10,15 +10,33 @@
     <h1>Tic-Tac-Toe</h1>
     <h3>Message Line</h3>
     <section id="board">
-        <div id="sq0"></div>
-        <div id="sq1"></div>
-        <div id="sq2"></div>
-        <div id="sq3"></div>
-        <div id="sq4"></div>
-        <div id="sq5"></div>
-        <div id="sq6"></div>
-        <div id="sq7"></div>
-        <div id="sq8"></div>
+        <div id="sq0">
+            <div class="square"></div>
+        </div>
+        <div id="sq1">
+            <div class="square"></div>
+        </div>
+        <div id="sq2">
+            <div class="square"></div>
+        </div>
+        <div id="sq3">
+            <div class="square"></div>
+        </div>
+        <div id="sq4">
+            <div class="square"></div>
+        </div>
+        <div id="sq5">
+            <div class="square"></div>
+        </div>
+        <div id="sq6">
+            <div class="square"></div>
+        </div>
+        <div id="sq7">
+            <div class="square"></div>
+        </div>
+        <div id="sq8">
+            <div class="square"></div>
+        </div>
     </section>
     <button>Play Again</button>
 </body>
